# systems-design-practice

./: .gitignore  Makefile  README.md  run.sh
backend/: pyproject.toml  requirements.txt
backend/backend/: settings.py  urls.py
backend/interview/: models.py  serializers.py  urls.py  views.py
backend/interview/migrations/: 0001_initial.py  0002_imageupload.py  0003_article_articlechat_articlemessage_interviewarticle.py
frontend/src/: App.css  App.js
frontend/src/components/: CompletedInterview.css  CompletedInterview.js  InterviewChat.css  InterviewChat.js  InterviewList.css  InterviewList.js  StartInterview.css  StartInterview.js
prompts/: 0-initial.md  1-add-view-interview.md
